--- a/css/style.css
+++ b/css/style.css
@@ -99,8 +99,6 @@ body p, body label {
 .titulo{
     color: #1d2c7b;
     font-weight: 700;
-    /*text-shadow: 1px 1px 2px gray;*/
-    font-size: 2rem;
 }
 
 .card{
@@ -125,6 +123,147 @@ body p, body label {
     width: 90px;
 }
 
-#containerFormulario{
+#containerTurnos, #containerFormulario, #containerMensaje, #containerTurnoGuardado{
     display: none;
+}
+
+.row{
+    justify-content: space-around;
+}
+
+/* CALENDARIO */
+.calendario-grid{
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 8px;
+}
+  
+.calendario-grid div{
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    background-color: #f8f9fa;
+    cursor: pointer;
+    transition: background-color 0.3s, border 0.3s;
+}
+
+.dia-semana{
+    font-weight: bold;
+    background-color: #e0e0e0;
+    cursor: default;
+    width: 60px;
+    height: 60px;
+}
+  
+.calendario-grid div.disponible{
+    background-color: #32a4efeb;
+    color: white;
+}
+  
+.calendario-grid div.nodisponible{
+    background-color: #e0e0e0;
+    cursor: default;
+}
+
+.calendario-grid div.seleccion {
+    background-color: #0056b3;
+}
+
+.mes-flecha{
+    background-color: transparent;
+    border: none;
+    color: gray;
+    font-weight: 800;
+    align-self: center;
+}
+
+.mes{
+    background-color: #91d4fc40;
+}
+
+.mes-texto{
+    align-self: center;
+    font-size: 18px;
+}
+
+/* HORARIOS */
+.horario-grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, auto);
+    gap: 10px;
+    justify-items: center;
+    align-items: center;
+}
+
+.horario-grid div{
+    text-align: center;
+    padding: 15px;
+    width: 100px;
+    height: 50px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s, border 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.horario-grid div.disponible{
+    background-color: #32a4efeb;
+    color: white;
+}
+  
+.horario-grid div.nodisponible{
+    background-color: #e0e0e0;
+    cursor: default;
+}
+  
+.horario-grid div.seleccion {
+    background-color: #0056b3;
+}
+
+.btn-enviar{
+    background-color: #0056b3;
+    border: none;
+    color: #fff;
+    padding: 12px 12px;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 12px;
+}
+
+.btn-enviar:hover{
+    background-color: #38b6ff;
+    cursor: pointer;
+}
+
+.mensaje{
+    font-size: 18px;
+}
+
+/* MEDIA QUERIES */
+@media (max-width: 768px){
+    .calendario-grid {
+      grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
+    }
+  }
+  
+  @media (max-width: 576px){
+    .calendario-grid {
+      grid-template-columns: repeat(auto-fit, minmax(30px, 1fr));
+    }
+
+    .calendario-grid div{
+        width: 40px;
+        height: 40px;
+    }
+
+    .horario-grid div{
+        width: 70px;
+        height: 40px;
+    }
 }
